# ccr

./: .clang-format  .clang-tidy  .gitignore  .iwyu.imp  CMakeLists.txt  Dispatcher.cpp  LICENSE  Makefile.LINUX  Makefile.WIN  Mode.cpp  Mode.hpp  README.md  STATIC_ANALYSIS_REPORT.md  help.hpp  profanity.cpp
.github/workflows/: ci.yml
docs/: ARCHITECTURE_REFACTORING_PROPOSAL.md  CMAKE_BUILD_INSTRUCTIONS.md  CODE_ANALYSIS_REPORT.md  FIX_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PROFILING.md  README_PACKAGE.md  REFACTORING_SUMMARY.md  REPOSITORY_FILE_LIST.md  SECURITY_FIX_DOCUMENTATION.md  STRUCTURE_MIGRATION.md  SUMMARY_REPORT.md  TEST_README.md
include/: ArgParser.hpp  CLMemory.hpp  Dispatcher.hpp  IMPROVEMENTS.hpp  Mode.hpp  ObjectPool.hpp  Result.hpp  SpeedSample.hpp  lexical_cast.hpp  types.hpp
kernel/: kernel_profanity.hpp  kernel_sha256.hpp
scripts/: profile.sh
src/: Dispatcher.cpp  Mode.cpp  profanity.cpp
src/benchmark/: bench_core.cpp
src/test/: test_address_validity.cpp  test_dispatcher.cpp  test_mode.cpp  test_precomp.cpp
